--- a/index.html
+++ b/index.html
@@ -184,12 +184,12 @@
         <div class="footer-row">
             <div class="footer-left">
                 <h1>giờ mở cửa</h1>
-                <p><i class="bi bi-clock">các ngày trong tuần - 9am to 11pm</i></p>
-                <p><i class="bi bi-clock">phục vụ lun các ngày lễ - 9am to 11pm</i></p>
+                <p><i class="bi bi-clock">các ngày trong tuần - 8am to 10pm</i></p>
+                <p><i class="bi bi-clock">phục vụ lun các ngày lễ - 8am to 10pm</i></p>
             </div>
             <div class="footer-right">
                 <h1>địa chỉ</h1>
-                <p>Khu hải vân phường vân dương thành phố Bắc Ninh<i class="bi bi-geo-alt"></i></p>
+                <p>Khu hai vân phường vân dương thành phố Bắc Ninh<i class="bi bi-geo-alt"></i></p>
                 <p>Linhlejp21@gmail.com <i class="bi bi-paperclip"></i></p>
                 <p> 0396.386.656<i class="bi bi-phone"></i></p>
             </div>
